// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Checkbox Checked 1`] = `
<div>
  <label
    className="w-full"
    htmlFor=":rg:"
  >
    <label
      className="max-w-[365px] undefined text-body-600 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Checked Checkbox ",
        }
      }
      data-testid="txt"
      htmlFor=":rg:"
    />
  </label>
  <input
    checked={true}
    className="h-4 w-4 cursor-pointer rounded-sm border-neutral-400 transition-all duration-300 checked:text-primary-500 focus:ring-transparent disabled:bg-neutral-400 lg:h-5 lg:w-5"
    id=":rg:"
    type="checkbox"
  />
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Checkbox Unchecked 1`] = `
<div>
  <label
    className="w-full"
    htmlFor=":rf:"
  >
    <label
      className="max-w-[365px] undefined text-body-600 with-inner-html"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Unchecked Checkbox ",
        }
      }
      data-testid="txt"
      htmlFor=":rf:"
    />
  </label>
  <input
    className="h-4 w-4 cursor-pointer rounded-sm border-neutral-400 transition-all duration-300 checked:text-primary-500 focus:ring-transparent disabled:bg-neutral-400 lg:h-5 lg:w-5"
    id=":rf:"
    type="checkbox"
  />
</div>
`;
